--- a/menu-delice-des-sens.html
+++ b/menu-delice-des-sens.html
@@ -28,144 +28,146 @@
         <section>
             <img class="img-menu" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette">
             <div class="base-menu">
-                <h1 class="base-menu__restaurant">
-                    Le délice des sens
-                    <label class="heart-container">
-                        <input type="checkbox" class="heart-checkbox">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
-                    </label>
-                </h1>
-                <article class="menu">
-                    <h2 class="menu__title">ENTRÉES</h2>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-1">
-                        <label for="checkbox-1" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Tartare de thon</p>
-                                <p class="menu__card__subtitle">Assaisonné au yuzu</p>
-                            </span>
+                <div class="base-menu__container">
+                    <h1 class="base-menu__restaurant">
+                        Le délice des sens
+                        <label class="heart-container">
+                            <input type="checkbox" class="heart-checkbox">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                         </label>
-                        <span class="menu__card__price">25€</span>
-                        <label for="checkbox-1" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-2">
-                        <label for="checkbox-2" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Bouchée de homard croustillant</p>
-                                <p class="menu__card__subtitle">Et sa farandole de petits légumes</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">35€</span>
-                        <label for="checkbox-2" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-3">
-                        <label for="checkbox-3" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Poulet rôti aux herbes de Provence</p>
-                                <p class="menu__card__subtitle">Et sa crème de truffe</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">40€</span>
-                        <label for="checkbox-3" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                </article>
+                    </h1>
+                    <article class="menu">
+                        <h2 class="menu__title">ENTRÉES</h2>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-1">
+                            <label for="checkbox-1" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Tartare de thon</p>
+                                    <p class="menu__card__subtitle">Assaisonné au yuzu</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">25€</span>
+                            <label for="checkbox-1" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-2">
+                            <label for="checkbox-2" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Bouchée de homard croustillant</p>
+                                    <p class="menu__card__subtitle">Et sa farandole de petits légumes</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">35€</span>
+                            <label for="checkbox-2" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-3">
+                            <label for="checkbox-3" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Poulet rôti aux herbes de Provence</p>
+                                    <p class="menu__card__subtitle">Et sa crème de truffe</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">40€</span>
+                            <label for="checkbox-3" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                    </article>
 
-                <article class="menu">
-                    <h2 class="menu__title">PLATS</h2>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-4">
-                        <label for="checkbox-4" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Poulet rôti aux herbes de Provence</p>
-                                <p class="menu__card__subtitle">Et sa crème de truffe</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">40€</span>
-                        <label for="checkbox-4" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-5">
-                        <label for="checkbox-5" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Langouste rôtie</p>
-                                <p class="menu__card__subtitle">Et ses légumes de saison</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">35€</span>
-                        <label for="checkbox-5" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-6">
-                        <label for="checkbox-6" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Côte de boeuf Angus</p>
-                                <p class="menu__card__subtitle">Et sa purée de panais</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">44€</span>
-                        <label for="checkbox-6" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                </article>
+                    <article class="menu">
+                        <h2 class="menu__title">PLATS</h2>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-4">
+                            <label for="checkbox-4" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Poulet rôti aux herbes de Provence</p>
+                                    <p class="menu__card__subtitle">Et sa crème de truffe</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">40€</span>
+                            <label for="checkbox-4" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-5">
+                            <label for="checkbox-5" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Langouste rôtie</p>
+                                    <p class="menu__card__subtitle">Et ses légumes de saison</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">35€</span>
+                            <label for="checkbox-5" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-6">
+                            <label for="checkbox-6" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Côte de boeuf Angus</p>
+                                    <p class="menu__card__subtitle">Et sa purée de panais</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">44€</span>
+                            <label for="checkbox-6" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                    </article>
 
-                <article class="menu">
-                    <h2 class="menu__title">DESSERTS</h2>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-7">
-                        <label for="checkbox-7" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Farandole de desserts</p>
-                                <p class="menu__card__subtitle">Du chef</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">18€</span>
-                        <label for="checkbox-7" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
+                    <article class="menu">
+                        <h2 class="menu__title">DESSERTS</h2>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-7">
+                            <label for="checkbox-7" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Farandole de desserts</p>
+                                    <p class="menu__card__subtitle">Du chef</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">18€</span>
+                            <label for="checkbox-7" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-8">
+                            <label for="checkbox-8" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Crème brulée</p>
+                                    <p class="menu__card__subtitle">Revisitée</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">22€</span>
+                            <label for="checkbox-8" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-9">
+                            <label for="checkbox-9" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Tiramisu</p>
+                                    <p class="menu__card__subtitle">À la noisette</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">23€</span>
+                            <label for="checkbox-9" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                    </article>
+                    <div class="btn-center">
+                        <a href="#" class="btn-commander btn-gradient btn-font btn-rounded btn-shadow">Commander</a>
                     </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-8">
-                        <label for="checkbox-8" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Crème brulée</p>
-                                <p class="menu__card__subtitle">Revisitée</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">22€</span>
-                        <label for="checkbox-8" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-9">
-                        <label for="checkbox-9" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Tiramisu</p>
-                                <p class="menu__card__subtitle">À la noisette</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">23€</span>
-                        <label for="checkbox-9" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                </article>
-                <div class="btn-center">
-                    <a href="#" class="btn-commander btn-gradient btn-font btn-rounded btn-shadow">Commander</a>
                 </div>
             </div>
         </section>
