--- a/menu-la-note-enchantée.html
+++ b/menu-la-note-enchantée.html
@@ -28,157 +28,159 @@
         <section>
             <img class="img-menu" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette">
             <div class="base-menu">
-                <h1 class="base-menu__restaurant">
-                    La note enchantée
-                    <label class="heart-container">
-                        <input type="checkbox" class="heart-checkbox">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
-                    </label>
-                </h1>
-                <article class="menu">
-                    <h2 class="menu__title">ENTRÉES</h2>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-1">
-                        <label for="checkbox-1" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Ravioles de foie gras</p>
-                                <p class="menu__card__subtitle">Accompagnées de leur crème à la truffe</p>
-                            </span>
+                <div class="base-menu__container">
+                    <h1 class="base-menu__restaurant">
+                        La note enchantée
+                        <label class="heart-container">
+                            <input type="checkbox" class="heart-checkbox">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                         </label>
-                        <span class="menu__card__price">25€</span>
-                        <label for="checkbox-1" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-2">
-                        <label for="checkbox-2" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Caviar osciètre</p>
-                                <p class="menu__card__subtitle">Sur blini à la farine de blé noir</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">35€</span>
-                        <label for="checkbox-2" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-3">
-                        <label for="checkbox-3" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Homard et espuma de potiron</p>
-                                <p class="menu__card__subtitle">Marinés aux zestes d'orange</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">20€</span>
-                        <label for="checkbox-3" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-4">
-                        <label for="checkbox-4" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Foie gras de canard cuit entier</p>
-                                <p class="menu__card__subtitle">Confiture de figue et pain toasté</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">35€</span>
-                        <label for="checkbox-4" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                </article>
+                    </h1>
+                    <article class="menu">
+                        <h2 class="menu__title">ENTRÉES</h2>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-1">
+                            <label for="checkbox-1" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Ravioles de foie gras</p>
+                                    <p class="menu__card__subtitle">Accompagnées de leur crème à la truffe</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">25€</span>
+                            <label for="checkbox-1" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-2">
+                            <label for="checkbox-2" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Caviar osciètre</p>
+                                    <p class="menu__card__subtitle">Sur blini à la farine de blé noir</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">35€</span>
+                            <label for="checkbox-2" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-3">
+                            <label for="checkbox-3" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Homard et espuma de potiron</p>
+                                    <p class="menu__card__subtitle">Marinés aux zestes d'orange</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">20€</span>
+                            <label for="checkbox-3" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-4">
+                            <label for="checkbox-4" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Foie gras de canard cuit entier</p>
+                                    <p class="menu__card__subtitle">Confiture de figue et pain toasté</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">35€</span>
+                            <label for="checkbox-4" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                    </article>
 
-                <article class="menu">
-                    <h2 class="menu__title">PLATS</h2>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-5">
-                        <label for="checkbox-5" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Noix de coquilles Saint-Jacques</p>
-                                <p class="menu__card__subtitle">Sur lit de purée de céleri-rave</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">40€</span>
-                        <label for="checkbox-5" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-6">
-                        <label for="checkbox-6" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Langoustine poêlée</p>
-                                <p class="menu__card__subtitle">Purée de patate douce</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">35€</span>
-                        <label for="checkbox-6" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-7">
-                        <label for="checkbox-7" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Mijoté de queue de boeuf</p>
-                                <p class="menu__card__subtitle">Et riz sauvage aux zestes de citron</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">45€</span>
-                        <label for="checkbox-7" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                </article>
+                    <article class="menu">
+                        <h2 class="menu__title">PLATS</h2>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-5">
+                            <label for="checkbox-5" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Noix de coquilles Saint-Jacques</p>
+                                    <p class="menu__card__subtitle">Sur lit de purée de céleri-rave</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">40€</span>
+                            <label for="checkbox-5" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-6">
+                            <label for="checkbox-6" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Langoustine poêlée</p>
+                                    <p class="menu__card__subtitle">Purée de patate douce</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">35€</span>
+                            <label for="checkbox-6" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-7">
+                            <label for="checkbox-7" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Mijoté de queue de boeuf</p>
+                                    <p class="menu__card__subtitle">Et riz sauvage aux zestes de citron</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">45€</span>
+                            <label for="checkbox-7" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                    </article>
 
-                <article class="menu">
-                    <h2 class="menu__title">DESSERTS</h2>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-8">
-                        <label for="checkbox-8" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Macaron noisette et chocolat</p>
-                                <p class="menu__card__subtitle">Glace au caramel brun et sel de Guérande</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">18€</span>
-                        <label for="checkbox-8" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
+                    <article class="menu">
+                        <h2 class="menu__title">DESSERTS</h2>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-8">
+                            <label for="checkbox-8" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Macaron noisette et chocolat</p>
+                                    <p class="menu__card__subtitle">Glace au caramel brun et sel de Guérande</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">18€</span>
+                            <label for="checkbox-8" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-9">
+                            <label for="checkbox-9" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Baba au rhum revisité</p>
+                                    <p class="menu__card__subtitle">Avec son coulis de citron</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">22€</span>
+                            <label for="checkbox-9" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                        <div class="menu__card">
+                            <input type="checkbox" class="menu-checkbox" id="checkbox-10">
+                            <label for="checkbox-10" class="menu__card__content">
+                                <span class="menu__card__content">
+                                    <p class="menu__card__title">Tarte au citron meringuée</p>
+                                    <p class="menu__card__subtitle">Déstructurée</p>
+                                </span>
+                            </label>
+                            <span class="menu__card__price">23€</span>
+                            <label for="checkbox-10" class="checkbox-container">
+                                <i class="fas fa-check"></i>
+                            </label>
+                        </div>
+                    </article>
+                    <div class="btn-center">
+                        <a href="#" class="btn-commander btn-gradient btn-font btn-rounded btn-shadow">Commander</a>
                     </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-9">
-                        <label for="checkbox-9" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Baba au rhum revisité</p>
-                                <p class="menu__card__subtitle">Avec son coulis de citron</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">22€</span>
-                        <label for="checkbox-9" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                    <div class="menu__card">
-                        <input type="checkbox" class="menu-checkbox" id="checkbox-10">
-                        <label for="checkbox-10" class="menu__card__content">
-                            <span class="menu__card__content">
-                                <p class="menu__card__title">Tarte au citron meringuée</p>
-                                <p class="menu__card__subtitle">Déstructurée</p>
-                            </span>
-                        </label>
-                        <span class="menu__card__price">23€</span>
-                        <label for="checkbox-10" class="checkbox-container">
-                            <i class="fas fa-check"></i>
-                        </label>
-                    </div>
-                </article>
-                <div class="btn-center">
-                    <a href="#" class="btn-commander btn-gradient btn-font btn-rounded btn-shadow">Commander</a>
                 </div>
             </div>
         </section>
